# xs_inference_examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DownloadGoogleBenchmark.cmake
include/bench/: f32_conv.h  utils.h
include/xs_inference_examples/: codegen.h  log.h  models.h  npy.h
src/: codegen.cc  label_image.cc
src/bench/: f32_conv.cc  ssd_mobilenet_v1_1_default_1.cc  utils.cc
src/models/: ssd_mobilenet_v1_1_default_1.cc
weights/: ssd_mobilenet_v1_1_default_1_dequantize_onnx.xs_tensor
